<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/toolbar"
                    android:text="Madia"
                    android:textColor="#0B0B0B"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_menu_24" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/dres" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fontFamily="@font/title"
                android:textSize="30dp"
                android:text="@string/content_judul"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Harga             :"
                android:textColor="#000000" />

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/content_price"
                android:textColor="#534D4D" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Stok               :"
                android:textColor="#000000" />

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/content_stok"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Pengiriman   :"
                android:textColor="#000000" />

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/content_pengiriman"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Detail            :"
                android:textColor="#000000" />

            <TextView
                android:fontFamily="@font/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/content_detail"
                android:textColor="#534D4D" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="45dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
                android:padding="15dp"
                android:text="Masukkan Keranjang"
                android:textColor="#000000"
                android:textSize="10dp" />

            <Button
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:padding="15dp"
                android:text="Beli Sekarang"
                android:textColor="#000000"
                android:textSize="10dp" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>